Delivery info added to order
