# docs/swagger.json
@@ -690,6 +690,17 @@
                     "Order"
                 ],
                 "summary": "CreateOrder",
+                "parameters": [
+                    {
+                        "description": "UpdateProfileDataPayload",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.OrderInfo"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "New order info",
@@ -1351,6 +1362,15 @@
                 "city": {
                     "type": "string"
                 },
+                "creationDate": {
+                    "type": "string"
+                },
+                "deliveryDate": {
+                    "type": "string"
+                },
+                "deliveryTime": {
+                    "type": "string"
+                },
                 "flat": {
                     "type": "string"
                 },
@@ -1366,10 +1386,21 @@
                         "$ref": "#/definitions/models.OrderProduct"
                     }
                 },
-                "statusId": {
-                    "type": "integer"
+                "status": {
+                    "type": "string"
                 },
                 "street": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.OrderInfo": {
+            "type": "object",
+            "properties": {
+                "deliveryDate": {
+                    "type": "string"
+                },
+                "deliveryTime": {
                     "type": "string"
                 }
             }
