# internal/models/order.go
@@ -1,10 +1,16 @@
 package models
 
-import "github.com/satori/go.uuid"
+import (
+	"github.com/satori/go.uuid"
+	"time"
+)
 
 type Order struct {
-	Id     uuid.UUID `json:"id"`
-	Status int64     `json:"statusId"`
+	Id           uuid.UUID `json:"id"`
+	Status       string    `json:"status"`
+	DeliveryDate string    `json:"deliveryDate"`
+	DeliveryTime string    `json:"deliveryTime"`
+	CreationAt   time.Time `json:"creationDate"`
 	Address
 	Products []OrderProduct `json:"products"`
 }
@@ -12,4 +18,9 @@ type Order struct {
 type OrderProduct struct {
 	Quantity int64 `json:"quantity"`
 	Product
+}
+
+type OrderInfo struct {
+	DeliveryAtDate string `json:"deliveryDate"`
+	DeliveryAtTime string `json:"deliveryTime"`
 }
